# opus-subtitles

./: .gitignore  LICENSE  README.md  pyproject.toml
opus_subtitles/: __init__.py  archive.py  download.py  extraction.py  languages.py  opus_subtitles.py  unzipped.py  utils.py  zipped.py
